--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,10 +64,11 @@
     </string-array>
 
     <string-array name="floor_options">
+        <item>G</item>
+
         <item>1st</item>
         <item>2nd</item>
         <item>3rd</item>
-        <item>4th</item>
     </string-array>
 
     <string-array name="time_slots">
